# d2l-example

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
chapter_linear-networks/: image_dataset.py  linear-regression-concise.ipynb  linear-regression-scratch.ipynb  softmax-regression-concise.ipynb  softmax-regression-scratch.ipynb
chapter_multilayer-perceptrons/: mlp.ipynb
chapter_preliminaries/: autograd.ipynb  linear-algebra.ipynb  ndarray.ipynb  pandas.ipynb
