[project]
name = "d2l-example"
version = "0.1.0"
description = "d2l-examlple"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch==2.2.2",
    "torchvision==0.17.2",
    "numpy<2",
    "pandas>=2.2.3",
    "d2l>=0.17.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "jupyterlab>=4.4.1",
]
